incident-app-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: incident-app-ingress
  annotations:
    kubernetes.io/ingress.class: alb 
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/subnets: "subnet-00dec4574161bf7c6, subnet-0a127391e17af727a, subnet-0a50ed4dc956526a1"
    alb.ingress.kubernetes.io/target-type: ip   # 👈 ADD THIS
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: incident-frontend-service
            port:
              number: 80
